Added Section and images

--- a/index.html
+++ b/index.html
@@ -14,9 +14,55 @@
 <body>
   <header>
     <div class="container">
-
+      <div id="branding">
+        <h1>Jarvis Web Design</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
+
+  <section id="showcase">
+    <div class="container">
+      <h1>Affordable Professional Web Desgin</h1>
+      <p>Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar</p>
+    </div>
+  </section>
+
+  <section id="newsletter">
+    <div class="container">
+      <h1>Subscribe to Our Newsletter</h1>
+      <form>
+        <input type="email" placeholder="Enter Email...">
+        <button type="submit" class="button_1">Subscribe</button>
+      </form>
+    </div>
+  </section>
+
+  <section id="boxes">
+    <div class="container">
+      <div class="box">
+        <img src="./img/HTML5.png">
+        <h3>HTML5 Markup</h3>
+        <p>Html5................................</p>
+      </div>
+      <div class="box">
+        <img src="./img/CSS3.png">
+        <h3>CSS3 Styling</h3>
+        <p>CSS3 Styling................................</p>
+      </div>
+      <div class="box"> <img src="./img/dynamic.png">
+        <h3>Graphic design</h3>
+        <p>Graphic design................................</p>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
