Completed base screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="showcase">
     <div class="container">
       <h1>Affordable Professional Web Desgin</h1>
-      <p>Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar Rajasekar</p>
+      <p>Ignorant branched humanity led now marianne too strongly entrance. Rose to shew bore no ye of paid rent form. Old design are dinner better nearer silent excuse. She which are maids boy sense her shade. Considered reasonable we affronting on expression in. So cordial anxious mr delight. Shot his has must wish from sell nay. Remark fat set why are sudden depend change entire wanted. Performed remainder attending led fat residence far. </p>
     </div>
   </section>
 
@@ -49,16 +49,16 @@
       <div class="box">
         <img src="./img/HTML5.png">
         <h3>HTML5 Markup</h3>
-        <p>Html5................................</p>
+        <p>Prevailed sincerity behaviour to so do principle mr. As departure at no propriety zealously my. On dear rent if girl view. First on smart there he sense. Earnestly enjoyment her you resources. Brother chamber ten old against. Mr be cottage so related minuter is. Delicate say and blessing ladyship exertion few margaret. Delight herself welcome against smiling its for. Suspected discovery by he affection household of principle perfectly he. </p>
       </div>
       <div class="box">
         <img src="./img/CSS3.png">
         <h3>CSS3 Styling</h3>
-        <p>CSS3 Styling................................</p>
+        <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.</p>
       </div>
       <div class="box"> <img src="./img/dynamic.png">
         <h3>Graphic design</h3>
-        <p>Graphic design................................</p>
+        <p>Civility vicinity graceful is it at. Improve up at to on mention perhaps raising. Way building not get formerly her peculiar. Up uncommonly prosperous sentiments simplicity acceptance to so. Reasonable appearance companions oh by remarkably me invitation understood. Pursuit elderly ask perhaps all. </p>
       </div>
     </div>
   </section>
